@@ -1459,3 +1459,69 @@ AT_CHECK([tail -1 stdout], [0],
 
 OVS_VSWITCHD_STOP
 AT_CLEANUP
+
+AT_SETUP([tunnel_push_pop - tunnel ICMP fragmentation needed])
+OVS_VSWITCHD_START([add-port br0 p0 -- set Interface p0 type=dummy ofport_request=1 other-config:hwaddr=aa:55:aa:55:00:00])
+AT_CHECK([ovs-appctl vlog/set dpif_netdev:dbg])
+AT_CHECK([ovs-appctl vlog/set netdev_vport:dbg])
+AT_CHECK([ovs-appctl vlog/set native_tnl:dbg])
+AT_CHECK([ovs-vsctl add-br int-br -- set bridge int-br datapath_type=dummy], [0])
+AT_CHECK([ovs-vsctl add-port int-br t1 -- set Interface t1 type=geneve \
+                       options:remote_ip=1.1.2.92 options:key=123 ofport_request=2 \
+                       options:df_default=true mtu_request=1400])
+
+dnl Setup dummy interface IP addresses.
+AT_CHECK([ovs-appctl netdev-dummy/ip4addr br0 1.1.2.88/24], [0], [OK
+])
+AT_CHECK([ovs-appctl netdev-dummy/ip4addr int-br 10.0.0.1/24], [0], [OK
+])
+
+dnl Checking that a local route for added IP was successfully installed.
+AT_CHECK([ovs-appctl ovs/route/show | grep Cached | sort], [0], [dnl
+Cached: 1.1.2.0/24 dev br0 SRC 1.1.2.88 local
+Cached: 10.0.0.0/24 dev int-br SRC 10.0.0.1 local
+])
+
+AT_CHECK([ovs-ofctl add-flow br0 action=normal])
+
+dnl This ARP reply from p0 has two effects:
+dnl 1. The ARP cache will learn that 1.1.2.92 is at f8:bc:12:44:34:b6.
+dnl 2. The br0 mac learning will learn that f8:bc:12:44:34:b6 is on p0.
+AT_CHECK([ovs-appctl netdev-dummy/receive p0 ']dnl
+[recirc_id(0),in_port(1),eth(src=f8:bc:12:44:34:b6,dst=ff:ff:ff:ff:ff:ff),eth_type(0x0806),]dnl
+[arp(sip=1.1.2.92,tip=1.1.2.88,op=2,sha=f8:bc:12:44:34:b6,tha=00:00:00:00:00:00)'])
+
+AT_CHECK([ovs-vsctl -- set Interface int-br options:pcap=int-br.pcap])
+
+dnl Verify MTU is set on tunnel interface
+AT_CHECK([ovs-vsctl get interface t1 mtu], [0], [dnl
+1400
+])
+
+AT_CHECK([ovs-ofctl add-flow int-br "priority=100,in_port=LOCAL,actions=output:2"])
+AT_CHECK([ovs-ofctl add-flow int-br "priority=1,actions=normal"])
+
+dnl Send a 1500 byte packet, exceeding the tunnel's MTU.
+zeros1458=$(printf '0%.0s' $(seq 2916))
+AT_CHECK([ovs-appctl netdev-dummy/receive int-br ]dnl
+[50540000000a5054000000090800]dnl
+[450005b600014000400121440a0000020a000001]dnl
+[0800f7fd00010001]dnl
+[${zeros1458}])
+
+ovs-appctl time/warp 1000
+
+dnl Verify that tunnel drop occured.
+AT_CHECK([ovs-appctl coverage/read-counter datapath_drop_tunnel_mtu_drop], [0], [1
+])
+
+dnl Check for ICMP Fragmentation Needed.
+AT_CHECK([ovs-pcap int-br.pcap 2>/dev/null | grep -q ]dnl
+[50540000000950540000000a0800]dnl
+[45c0003800000000400166030a0000010a000002]dnl
+[0304f78300000578]dnl
+[450005b600014000400121440a0000020a000001]dnl
+[0800f7fd00010001], [0])
+
+OVS_VSWITCHD_STOP
+AT_CLEANUP
